# CellRegMap

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  NEWS.md  README.md  _config.yml  citation.md  contact.md  default.html  get_data.py  greater power and computational efficiency.pdf.bz2  index.md  input_files.md  installation.md  limix.md  proof.md  rachel thesis part 1.pdf.bz2  run_structLMM2.py  run_structLMM2_int.py  setup.cfg  setup.py  simulations.py  simulations1.py  struct_lmm.py  struct_lmm_int_2kinships.py  structlmm.md  svd.txt  test_struct_lmm_int_2kinships.py  tutorials.md  usage.md
.github/workflows/: deploy.yaml
_layouts/: default.html
cellregmap/: __init__.py  _cellregmap.py  _math.py  _simulate.py  _struct_lmm2.py  _types.py
cellregmap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cellregmap/test/: old_test_struct_lmm2.py  test_fixed_gxe.py  test_math.py  test_simulation.py  test_struct_lmm2.py
docs/: conf.py  functions.rst  index.rst  install.rst  requirements.txt
docs_backup/: requirements.txt
old_files/: ola.py  run_structLMM2.py  run_structLMM2_int.py  scan_assoc.py  script.py  simulations1.py
struct_lmm2/: __init__.py  _math.py  _simulate.py  _struct_lmm2.py  struct_lmm2.py  struct_lmm2_old.py
struct_lmm2/test/: test_fixed_gxe.py  test_math.py  test_simulation.py  test_struct_lmm2.py
