[metadata]
author = Anna Cuomo, Danilo Horta
author_email = acuomo@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = A linear mixed model framework to map multivariate context-specific eQTL using single-cell RNA-seq data.
download_url = https://github.com/limix/CellRegMap
keywords = scRNA-seq, eQTL, context-specific regulation
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = cellregmap
url = https://github.com/limix/CellRegMap
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >= 3.6
install_requires =
    chiscore>=0.2.3
    glimix-core>=3.1.12
    numpy-sugar>=1.5.1
    numpy>=1.17.5
    pytest>=5.4.3
    scipy>=1.2.3
    tqdm>=4.41.1

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
doctest_rst = enabled
norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir old_files

[flake8]
ignore = E501,E741,E203,W503,W0212,W0622,R0915,E743

[pycodestyle]
ignore = E741,E743,E203
max-line-length = 88

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[pylint]
disable = redefined-builtin,R0915

[rstcheck]
ignore_substitutions = today, version
ignore_directives = plot, autofunction, command-output, autmodule, automodule, autoclass, autoattribute, automethod, doctest
ignore_messages = Error in "math" directive
